After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 126056 - graph should not invent data when there are no data
graph should not invent data when there are no data
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
1.2.x
Other Linux
: Normal minor
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-11-02 17:58 UTC by Frederic Parrenin
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Frederic Parrenin 2003-11-02 17:58:51 UTC
Open a spreadsheet.
Enter the following data:
0  1
   2
2  0

Plot them as an XY graph.
=> gnumeric plots in fact the following set:
0  1
2  2
2  0
i.e. gnumeric has invented a data that does not exist.

Is it a bug or a wanted feature ?
[Note: OO does not have this behaviour.]

Regards.    Frédéric
Comment 1 Jody Goldberg 2003-11-03 07:32:38 UTC
xl is just so consistent :-p

blank as X  or Y is a missing entry
string means use an index value for X
strings means use 0 for Y

fixed