http://bugzilla.gnome.org/show_bug.cgi?id=126056 differentiate between

2003-11-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=126056
	* graph/plugins/plot_xy/gog-xy.c (gog_xy_view_render) : differentiate
	  between missing and bad strings.  X axis strings are indicies, Y
	  axis strings are 0.

2003-11-03  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=126056
	* src/graph.c (cb_assign_val) : failed string conversion is inf,
	  rather than nan.